--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.dylib
 .idea
 .claude
+nul
 
 # Test binary, built with `go test -c`
 *.test
@@ -22,4 +23,7 @@
 
 # Go workspace file
 go.work
+
+# AI documentation (not for version control)
+TODO.md
 
